# hearth

./: CONTRIBUTORS.md  Cargo.toml  DESIGN.md  NEW_DESIGN.md  README.md
.github/workflows/: pr.yml  todo.yml
core/runtime/src/: lib.rs
core/schema/: Cargo.toml
core/schema/src/: lib.rs  renderer.rs
crates/dominion/: Cargo.toml
crates/dominion/src/: component.rs  lib.rs  query.rs
crates/hearth-core/src/: asset.rs  lump.rs  process.rs  runtime.rs
crates/hearth-ctl/: Cargo.toml
crates/hearth-ctl/src/: spawn_wasm.rs
crates/hearth-ipc/src/: lib.rs
crates/hearth-network/src/: lib.rs
crates/hearth-rpc/src/: lib.rs
crates/hearth-types/src/: lib.rs
crates/rend3-alacritty/examples/: demo.rs
crates/rend3-alacritty/src/: lib.rs  terminal.rs
guest/rust/: Cargo.toml
guest/rust/hearth-guest/src/: lib.rs
guest/rust/hearth-test-wasm/src/: lib.rs
kindling/: Cargo.toml
kindling/host/: Cargo.toml
kindling/schema/: Cargo.toml
kindling/schema/src/: gltf.rs  lib.rs  model.rs  panel.rs  physics.rs
kindling/services/flycam/: Cargo.toml
kindling/services/flycam/src/: lib.rs
kindling/services/gltf/: Cargo.toml
kindling/services/gltf/src/: LICENSE.md  lib.rs
kindling/services/panel-manager/: Cargo.toml
kindling/services/panel-manager/src/: lib.rs
kindling/services/physics/: Cargo.toml
kindling/services/physics/src/: lib.rs
kindling/services/scene/: Cargo.toml
kindling/services/scene/src/: lib.rs
kindling/services/terminal-demo/: Cargo.toml
kindling/services/terminal-demo/src/: lib.rs
kindling/services/ui-demo/: Cargo.toml
kindling/services/ui-demo/src/: lib.rs  text.rs  view.rs
main/client/: Cargo.toml
main/client/src/: window.rs
main/ctl/: Cargo.toml
main/server/: Cargo.toml
plugins/canvas/src/: lib.rs  shaders.wgsl
plugins/debug-draw/src/: lib.rs  shaders.wgsl
plugins/rend3/: Cargo.toml
plugins/rend3/src/: lib.rs
plugins/renderer/src/: conv.rs  lib.rs
plugins/terminal/: Cargo.toml
plugins/terminal/examples/: demo.rs
plugins/terminal/src/: draw.rs  grid.wgsl  lib.rs  shaders.wgsl  terminal.rs  text.rs
