[package]
name = "hearth-rend3"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { workspace = true }
glam = { workspace = true }
hearth-runtime = { workspace = true }
rend3 = { workspace = true }
rend3-routine = { workspace = true }
tokio = { version = "1.24", features = ["sync"] }
wgpu = "^0.18"
