[package]
name = "kindling-flycam"
version = "0.1.0"
edition = "2021"
description = "A simple flycam implementation"

[package.metadata.service]
name = "rs.hearth.kindling.Flycam"
targets = []
dependencies.need = ["hearth.Window", "rs.hearth.kindling.PanelManager"]

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = "2.4.1"
kindling-host.workspace = true
kindling-schema.workspace = true
hearth-guest.workspace = true
