[package]
name = "kindling-gltf"
version = "0.1.0"
edition = "2021"
description = "Implements glTF loading on top of the native renderer schema."

[package.metadata.service]
name = "rs.hearth.kindling.glTF"
targets = []
dependencies.need = ["hearth.Renderer"]

[lib]
crate-type = ["cdylib"]

[dependencies]
glam = "0.20"
gltf = "1.3"
hearth-guest.workspace = true
kindling-host.workspace = true
image = "0.24"
serde = "1"
serde_json = "1"
