[package]
name = "kindling-panel-manager"
version = "0.1.0"
edition = "2021"
description = "Kindling's core panel manager."

[package.metadata.service]
name = "rs.hearth.kindling.PanelManager"
dependencies.need = ["hearth.StopwatchFactory"]

[lib]
crate-type = ["cdylib"]

[dependencies]
glam.workspace = true
hearth-guest.workspace = true
kindling-host.workspace = true
kindling-schema.workspace = true
