[package]
name = "kindling-terminal-demo"
version = "0.1.0"
edition = "2021"
description = "A demonstration of Hearth's terminal emulator."

[package.metadata.service]
name = "rs.hearth.kindling.TerminalDemo"
targets = []
dependencies.need = ["hearth.terminal.TerminalFactory", "hearth.Sleep", "rs.hearth.kindling.PanelManager"]

[lib]
crate-type = ["cdylib"]

[dependencies]
hearth-guest.workspace = true
kindling-host.workspace = true
kindling-schema.workspace = true
serde_json.workspace = true
