[package]
name = "kindling-ui-demo"
version = "0.1.0"
edition = "2021"
description = "A demo of some basic Hearth UI"

[package.metadata.service]
name = "rs.hearth.kindling.uiDemo"
targets = []

[lib]
crate-type = ["cdylib"]

[dependencies]
hearth-guest.workspace = true
glam = "0.20"
raqote = {version = "0.8", default-features = false}
notosans = "0.1"

[dependencies.cosmic-text]
version = "0.10"
default-features = false
features = ["std", "swash"]
